Fix z-index issue on blog jumbotron

--- a/common/static/common/styles/studio/_blog.scss
+++ b/common/static/common/styles/studio/_blog.scss
@@ -16,7 +16,7 @@
       width: calc(100% + #{$spacer * 8});
       left: -$spacer * 4;
       background: $dark;
-      z-index: -1;
+      z-index: -2;
       border-radius: $border-radius;
     }
   }
